# libwecan-wasm

./: CMakeLists.txt  README.md  package.json
example/: test.mjs
lib/: libwecan.js
native/: CMakeLists.txt  README.md
native/example/: test.c
native/src/: libwecan.c
src/: index.ts  module.ts  wecan.ts
